--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,9 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.6",
-    "@mui/material": "^6.4.5",
+    "@mui/material": "^6.4.8",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "js-cookie": "^3.0.5",
